# cytech_traitement_du_signal

./: Makefile  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: continous_integration.yml
app/: data.py  display.py  filters.py  fourier.py  handwritten_digit_classifier.py  home.py  images.py  metrics.py
app/pages/: __init__.py  detection.py  explications.py
notebook/: notebook.ipynb  rapport.ipynb
