[tool.poetry]
name = "cytech-traitement-du-signal"
version = "0.1.0"
description = "Projet pour le cours de \"Traitement du Signal\" de CY Tech."
authors = ["Charles-Meldhine Madi Mnemoi <icdk5b4zf@relay.firefox.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app"}
]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
Pillow = "^10.0.1"
streamlit = "^1.27.2"
matplotlib = "^3.8.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
black = "^23.9.1"
notebook = "^7.0.6"
pandoc = "^2.3"
nbconvert = "^7.11.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 100

[tool.mypy]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
